<resources>
    <string name="app_name">MealPlanner</string>

    <string name="hello_fragment_home">Hello fragment home</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="salad">Salad</string>
    <string name="soup">Soup</string>
    <string name="pan_frying">Pan Frying</string>
    <string name="dessert">Dessert</string>
    <string name="dessert_Cap">DESSERT</string>
    <string name="add">Add</string>
    <string name="food_name">Food Name</string>
    <string name="origin">Origin</string>
    <string name="food_calories">Food Calories</string>
    <string name="home">Home</string>
    <string name="favourite_pick">Favourite Pick</string>
    <string name="food_plan">Food Plan</string>
    <string name="food_list">Food List</string>
    <string name="setting">Setting</string>
    <string name="item">item</string>
    <string name="appetizer">APPETIZER</string>
    <string name="entree">ENTREE</string>
    <string name="instruction_label">Instruction</string>
    <string name="test_passage">This is a dummy passage to test how the app will look like.
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like
        This is a dummy passage to test how the app will look like</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="login_statement">Login Your Account</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="food_type">Food Type</string>
    <string name="sample_duration">20 minutes</string>
    <string name="view_plan">View Today Meal Plan</string>
    <string name="prepare_duration_label">Preparation Duration</string>
    <string name="test">Test</string>
    <string name="what_is_your_plan_today">What Is Your Plan Today?</string>
    <string name="calories_intake">Calories Intake</string>
    <string name="meal_set_recommended">Meal Set Recommended</string>
    <string name="yesterday_meal_set">Yesterday Meal Set</string>
    <string name="breakfast">Breakfast</string>
    <string name="kj">\?? kj</string>
    <string name="recommended_kj">\?? recommended kj</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="beverage">Beverage</string>

    <string name="title_activity_create_menu">CreateMenuActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="new_menu">New Menu</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="add_food">Add Food</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="add_ingredient">+ Ingredients</string>
    <string name="enter_ingredient_name">Enter Ingredient Name</string>
    <string name="ingredient_list">Ingredient List</string>
    <string name="save">Save</string>
    <string name="increase_plus_symbol">+</string>
    <string name="increase_minus_symbol">-</string>
    <string name="number">number</string>
    <string name="gram">Gram (g)</string>
    <string name="calories">Calories</string>
    <string name="quantity">Quantity</string>
    <string name="instruction_desc">Instruction Description</string>
    <string name="delete">Delete</string>
    <string name="clear_text_button">Clear Text Button</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="enter_ingredient_calories">Enter Calories Per 100g</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="test_main_content">Test Main Content</string>
    <string name="no_of_servings">Number of Servings</string>
    <string name="volume_measurement">Volume Measurement</string>
    <string name="countable_cup">Countable (cup,…)</string>
    <string name="uncountable_grams">Uncountable (grams,…)</string>
    <string name="city_name">City Name</string>
    <string name="progress_circular_bar">progress circular bar</string>
</resources>
