<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/favourite_pick" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/food_plan" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/food_list" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/setting"/>
        </menu>
    </item>

</menu>
