<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.myapp.mealplanner.Fragment.CreateNewRecipeFrag">

    <EditText
        android:id="@+id/newRecipe_dishNameEditTxt_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_name"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/prepDuInput_createNewRecipe_Frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/prepare_duration_label"
            android:textSize="18sp"
            android:inputType="time"/>

        <TextView
            android:id="@+id/calInput_createNewRecipe_Frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/food_calories"
            android:textSize="18sp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/servingNoInput_createNewRecipe_Frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/no_of_servings"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/foodTypeSpin_createNewRecipe_Frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/menuItmTypeSpin_createNewRecipe_Frag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/insLabel_createNewRecipe_Frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_label"
            android:textSize="22sp"
            android:layout_marginEnd="120dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/addIngBtn_createNewRecipe_Frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            android:textSize="12sp"
            android:layout_toEndOf="@id/insLabel_createNewRecipe_Frag"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <EditText
        android:id="@+id/insInput_createNewRecipe_Frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/instruction_desc" />

    <Button
        android:id="@+id/addRecBtn_createNewRecipe_Frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/add" />

</LinearLayout>
