<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myapp.mealplanner.Fragment.NewRecipeFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/dishNameEditTxt_createNewRecipe_Frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/recipe_name"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cityEditTxt_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/city_name" />

            <Spinner
                android:id="@+id/countrySpn_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/calInput_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/food_calories"
                android:textSize="18sp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/prepDuInput_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/prepare_duration_label"
                android:inputType="time"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/servingNoInput_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/no_of_servings"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/foodTypeSpn_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/menuItmTypeSpn_createNewRecipe_Frag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!--<RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">-->

        <TextView
            android:id="@+id/insLabel_createNewRecipe_Frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="120dp"
            android:text="@string/instruction_label"
            android:textSize="22sp"
            android:textStyle="bold" />

        <!--<Button
            android:id="@+id/addIngBtn_createNewRecipe_Frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/insLabel_createNewRecipe_Frag"
            android:text="@string/add_ingredient"
            android:textSize="12sp" />

    </RelativeLayout>-->

        <TextView
            android:id="@+id/ingSelected_createNewRecipe_Frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/add_ingredient"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/insInput_createNewRecipe_Frag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/instruction_desc" />
    </LinearLayout>

    <!--Alternative method 1: using Relative Layout with
    <Button
        ...
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="59dp"/>-->

    <!-- or 2: -->
    <Button
        android:id="@+id/addRecBtn_createNewRecipe_Frag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="40dp"
        android:hint="@string/add" />
</FrameLayout>
