<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/ingName_listItm_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <TextView
        android:id="@+id/ingCal_listItm_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <Button
        android:id="@+id/ingQunBtnDed_listItm_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/increase_minus_symbol"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/ingQun_listItm_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:gravity="center"
        android:layout_weight="2" />

    <Button
        android:id="@+id/ingQunBtnInc_listItm_Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/increase_plus_symbol"
        android:layout_weight="1" />

</LinearLayout>